fix: font size and spacing

--- a/app/globals.css
+++ b/app/globals.css
@@ -29,27 +29,27 @@
     }
 
     h1 {
-        @apply text-2xl md:text-3xl lg:text-4xl xl:text-5xl 2xl:text-6xl leading-[2rem] md:leading-[3rem] lg:leading-[3.5rem] xl:leading-[3.875rem] 2xl:leading-[4.5rem] font-medium;
+        @apply text-3xl lg:text-5xl leading-[2rem] md:leading-[3rem] lg:leading-[3.5rem] xl:leading-[3.875rem] 2xl:leading-[4.5rem] font-medium;
     }
 
     h2 {
-        @apply text-xl md:text-2xl lg:text-3xl xl:text-4xl 2xl:text-5xl leading-[2.5rem] md:leading-[2.5rem] lg:leading-[2.75rem] xl:leading-[3rem] 2xl:leading-[3.25rem] font-medium;
+        @apply text-2xl lg:text-4xl leading-[2.5rem] md:leading-[2.5rem] lg:leading-[2.75rem] xl:leading-[3rem] 2xl:leading-[3.25rem] font-medium;
     }
 
     h3 {
-        @apply text-lg md:text-xl lg:text-2xl xl:text-3xl 2xl:text-4xl leading-[2.25rem] md:leading-[2.25rem] lg:leading-[2.5rem] xl:leading-[2.75rem] 2xl:leading-[3rem] font-medium;
+        @apply text-xl lg:text-3xl leading-[2.25rem] md:leading-[2.25rem] lg:leading-[2.5rem] xl:leading-[2.75rem] 2xl:leading-[3rem] font-medium;
     }
 
     h4 {
-        @apply text-base md:text-lg lg:text-xl xl:text-2xl 2xl:text-3xl leading-[1.75rem] md:leading-[1.75rem] lg:leading-[2rem] xl:leading-[2.25rem] 2xl:leading-[2.5rem] font-medium;
+        @apply text-lg lg:text-2xl leading-[1.75rem] md:leading-[1.75rem] lg:leading-[2rem] xl:leading-[2.25rem] 2xl:leading-[2.5rem] font-medium;
     }
 
     h5 {
-        @apply text-sm md:text-base lg:text-lg xl:text-xl 2xl:text-2xl leading-[1.5rem] md:leading-[1.5rem] lg:leading-[1.75rem] xl:leading-[2rem] 2xl:leading-[2.25rem] font-medium;
+        @apply text-base lg:text-xl leading-[1.5rem] md:leading-[1.5rem] lg:leading-[1.75rem] xl:leading-[2rem] 2xl:leading-[2.25rem] font-medium;
     }
 
     h6 {
-        @apply text-xs md:text-sm lg:text-base xl:text-lg 2xl:text-xl leading-[1.25rem] md:leading-[1.25rem] lg:leading-[1.5rem] xl:leading-[1.75rem] 2xl:leading-[2rem] font-medium;
+        @apply text-sm lg:text-lg leading-[1.25rem] md:leading-[1.25rem] lg:leading-[1.5rem] xl:leading-[1.75rem] 2xl:leading-[2rem] font-medium;
     }
 
 }
